# vim-heros

./: Cargo.toml  MINIGAME.md  PLAN.md  README.md
.claude/skills/: add-content.md
config/: energy.toml
content/python/intro/: intro_1_1.toml  intro_1_2.toml  intro_1_3.toml  intro_1_4.toml  intro_1_5.toml  intro_2_1.toml  intro_2_2.toml  intro_2_3.toml  intro_2_4.toml  intro_2_5.toml  intro_3_1.toml  intro_4_1.toml  intro_5_1.toml
content/python/junior/: abstract_base_classes.toml  args_kwargs.toml  binary_search.toml  chained_comparisons.toml  class_inheritance.toml  class_methods.toml  classes_basic.toml  closures.toml  collections_module.toml  context_managers.toml  custom_decorators.toml  dataclasses.toml  datetime_basics.toml  decorators_basic.toml  dict_comprehensions.toml  edit_change_words.toml  edit_delete_lines.toml  edit_delete_words.toml  edit_mixed_ops.toml  edit_replace_chars.toml  enum_classes.toml  file_io.toml  (+23 more)
demos/: index.html  world-01-movement.html  world-02-editing.html  world-03-verbnoun.html  world-04-textobjects.html  world-05-visual.html  world-06-search.html  world-07-buffers.html  world-08-marks.html  world-09-macros.html  world-10-advanced.html  world-11-grandmaster.html
docs/: PLAN.md  worlds.md
src/: app.rs  main.rs
src/content/: assembler.rs  loader.rs  mod.rs  segment.rs
src/game/: energy.rs  engine.rs  mod.rs  pathfinder.rs  scoring.rs  task.rs  viewport.rs  worlds.rs
src/ui/: game_view.rs
src/vim/: buffer.rs  command.rs  cursor.rs  mod.rs  mode.rs  motions.rs  range.rs  register.rs  search.rs  text_objects.rs  undo.rs
(+145 files in other folders)
